# Shift-Scheduling-Agent

./: ARCHITECTURE.md  README.md  ROADMAP.md  SCENARIOS.md  __init__.py  agent.py  cli.py  config.py  example_rules.yaml  example_shifts.yaml  example_staff.yaml  llm_interface.py  scheduler.py  test_scheduler.py
Shift-Scheduling-Agent/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
Shift-Scheduling-Agent/configs/: README.md  sample_week.json
Shift-Scheduling-Agent/docs/: adding_constraints.md  architecture.md  constraints.md
Shift-Scheduling-Agent/evals/datasets/: smoke.jsonl
Shift-Scheduling-Agent/src/shift_scheduling_agent/: __init__.py  agent.py  cli.py  config_io.py  constraints.py  domain.py  mock_llm.py  scoring.py  solver.py  tools.py
Shift-Scheduling-Agent/src/shift_scheduling_agent/evals/: harness.py
Shift-Scheduling-Agent/tests/: test_constraints.py  test_solver_smoke.py
