[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shift-scheduling-agent"
version = "0.1.0"
description = "Offline-first shift scheduling agent with constraints, scoring, evals, and a CLI."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Ethan", email="example@example.com"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5.0",
]

[project.scripts]
shift-agent = "shift_scheduling_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
